--- a/src/vercel.json
+++ b/src/vercel.json
@@ -2,7 +2,7 @@
 
     "rewrites": [
 
-        { "source": "/(.*)", "destination": "/api/app.py" }
+        { "source": "/(.*)", "destination": "/api/app" }
 
     ]
 
