--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites": [
+  "rewrites": [
       {
-        "source": "/(.*)",
-        "destination": "/api/index.py"
+          "source": "/(.*)",
+          "destination": "/$1"
       }
-    ]
-  }
+  ]
+}
