--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "rewrites": [
+    "rewrites": [
       {
-          "source": "/(.*)",
-          "destination": "/$1"
+        "source": "/(.*)",
+        "destination": "/api/index.py"
       }
-  ]
-}
+    ]
+  }
